--- a/website/content/docs/platform/aws/lambda-extension-cache.mdx
+++ b/website/content/docs/platform/aws/lambda-extension-cache.mdx
@@ -16,8 +16,8 @@ You can use the [quick-start](https://github.com/hashicorp/vault-lambda-extensio
 
 To use the extension, include the following ARN as a layer in your Lambda function:
 
-```shell-session
-$ arn:aws:lambda:us-east-1:634166935893:layer:vault-lambda-extension:11
+```text
+arn:aws:lambda:us-east-1:634166935893:layer:vault-lambda-extension:11
 ```
 
 Where region may be any of `af-south-1`, `ap-east-1`, `ap-northeast-1`,
