--- a/website/content/docs/audit/index.mdx
+++ b/website/content/docs/audit/index.mdx
@@ -66,7 +66,7 @@ cluster by default, and to performance/DR secondaries for Vault Enterprise clust
 Before enabling an audit device, ensure that all nodes within the cluster(s)
 will be able to successfully log to the audit device to avoid Vault being
 blocked from serving requests.
-An audit device can be limited to only within the node's cluster with the [`local`](api/system/audit#local) parameter.
+An audit device can be limited to only within the node's cluster with the [`local`](/api/system/audit#local) parameter.
 
 When an audit device is disabled, it will stop receiving logs immediately.
 The existing logs that it did store are untouched.
