Add initial FIPS 140-2 inside documentation
This documents the new FIPS 140-2 Inside binary and how to use and
validate it. This also documents which algorithms are certified for
use in the BoringCrypto distribution.

Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/docs/enterprise/fips/index.mdx
+++ b/website/content/docs/enterprise/fips/index.mdx
@@ -11,6 +11,12 @@ is a cryptography-focused certification standard for U.S. Government usage.
 
 Hashicorp's Vault Enterprise supports the modes of FIPS compliance documented below.
 
+## FIPS 140-2 Inside
+
+Vault Enterprise now includes release flavors with FIPS 140-2 compliant
+cryptography built into the Vault binary. More information on these releases
+can be found on the [FIPS 140-2 Inside](/docs/enterprise/fips/fips1402) page.
+
 ## Seal Wrap
 
 Before our FIPS Inside effort, Vault [depended on](https://www.hashicorp.com/vault-compliance)
