backport of commit 4bdc0d8675c4440f18ef8866e5aa5c4cbe0809a6

--- a/website/content/docs/glossary.mdx
+++ b/website/content/docs/glossary.mdx
@@ -70,8 +70,9 @@ standalone applications that Vault executes and communicates with over RPC.
 Each time a Vault secret engine or auth method is mounted, a new process is
 spawned.
 
-#### Multiplexed Plugin
+#### External Multiplexed Plugin
 
+An external plugin may make use of [plugin multiplexing](/docs/plugins/plugin-architecture#plugin-multiplexing).
 A multiplexed plugin allows a single plugin process to be used for multiple
 mounts of the same type.
 
