backport of commit 7fd0ff9d0d71a95deabf58731b60c0d09ff58ab6

--- a/website/content/docs/glossary.mdx
+++ b/website/content/docs/glossary.mdx
@@ -15,7 +15,7 @@ documentation for Vault.
 - [Auth Method](#auth-method)
 - [Barrier](#barrier)
 - [Client Token](#client-token)
-- [Plugin](#Plugin)
+- [Plugin](#plugin)
 - [Secret](#secret)
 - [Secrets Engine](#secrets-engine)
 - [Server](#server)
