--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -90,7 +90,7 @@ $ curl \
 ## Client Count
 
 This endpoint returns client activity information for a given billing
-period. The billing period is represented by the `start_time` and `end_time`
+period, which is represented by the `start_time` and `end_time` parameters.
 parameters.
 
 There are a few things to be known while using this API.
