--- a/website/content/api-docs/system/internal-counters.mdx
+++ b/website/content/api-docs/system/internal-counters.mdx
@@ -259,7 +259,7 @@ page.
 The response will include all child namespaces of the namespace in which the
 request was made. If some namespace has subsequently been deleted, its path will
 be listed as "deleted namespace :ID:." Deleted namespaces are reported only for
-queries in the root namespace, because the information about the namespace path
+queries in the root namespace because the information about the namespace path
 is unknown.
 
 This endpoint was added in Vault 1.6.
