backport of commit 2aa08e3e9054213925ba9db0cf354c4f6b4a01f2

--- a/website/content/docs/agent/autoauth/index.mdx
+++ b/website/content/docs/agent/autoauth/index.mdx
@@ -188,7 +188,7 @@ These configuration values are common to all Sinks:
 
 ### Auto Auth Example
 
-```python
+```hcl
 # Other Vault Agent configuration blocks
 # ...
 
