docs: update agent sections around auto-auth, caching, and templating (#15195)
* docs: update agent sections around auto-auth, caching, and templating

* Update website/content/docs/agent/template.mdx

Co-authored-by: Yoko Hyakuna <yoko@hashicorp.com>

* address review feedback

* Example snippet updates

* review feedback on example note

* address review feedback

* use hcl syntax highlight on code blocks

* simplify exec param description

Co-authored-by: Yoko Hyakuna <yoko@hashicorp.com>

--- a/website/content/docs/agent/index.mdx
+++ b/website/content/docs/agent/index.mdx
@@ -289,7 +289,7 @@ Configuration](#example-configuration) section for an example configuration.)
 
 An example configuration, with very contrived values, follows:
 
-```python
+```hcl
 pid_file = "./pidfile"
 
 vault {
@@ -332,6 +332,10 @@ cache {
 listener "unix" {
   address = "/path/to/socket"
   tls_disable = true
+
+  agent_api {
+    enable_quit = true
+  }
 }
 
 listener "tcp" {
