--- a/website/content/docs/upgrading/upgrade-to-1.10.x.mdx
+++ b/website/content/docs/upgrading/upgrade-to-1.10.x.mdx
@@ -110,7 +110,7 @@ There is a workaround for this error that will allow you to sign in to Vault usi
 auth method. Select the "Other" tab instead of selecting the specific OIDC auth mount tab.
 From there, select "OIDC" from the "Method" select box and proceed to sign in to Vault.
 
-### Login MFA configuration not loaded at startup
+### Login MFA not enforced after restart
 
 A serious bug was identified in the Login MFA feature introduced in 1.10.0:
 [#15108](https://github.com/hashicorp/vault/issues/15108).
